Updating intraweb text

--- a/public/gcintranet/samples/subtheme-en.html
+++ b/public/gcintranet/samples/subtheme-en.html
@@ -55,13 +55,13 @@
 				}],
 				"intranetTitle": [{
 					"href": "https://esdc.prv/en/index.shtml",
-					"text": " IntraWeb",
+					"text": " Intranet",
 					"boldText" : "ESDC/SC",
 					"acronym": "Employment and Social Development Canada / Service Canada"
 				}],
 				"customSearch": [{
 					"action" : "https://hrsdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx", // Mandatory
-					"placeholder" : "Search the IntraWeb", // Optional
+					"placeholder" : "Search the Intranet", // Optional
 					"method" : "get", // Mandatory "get" or "post"
 					"hiddenInput" : [{
 						"name" : "k",
