--- a/public/gcintranet/samples/subtheme-esdc-fr.html
+++ b/public/gcintranet/samples/subtheme-esdc-fr.html
@@ -55,13 +55,13 @@
 				}],
 				"intranetTitle": [{
 					"href": "https://esdc.prv/fr/index.shtml",
-					"text": " IntraWeb",
+					"text": " Intranet",
 					"boldText" : "ESDC/SC",
 					"acronym": "Emploi et Développement social Canada / Service Canada"
 				}],
 				"customSearch": [{
 					"action" : "https://hrsdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx", // Mandatory
-					"placeholder" : "Recherche sur l'intraWeb", // Optional
+					"placeholder" : "Recherche sur l'intranet", // Optional
 					"method" : "get", // Mandatory "get" or "post"
 					"hiddenInput" : [{
 						"name" : "k",
@@ -92,13 +92,13 @@ defTop.outerHTML = wet.builder.top({
 	}],
 	"intranetTitle": [{
 		"href": "https://esdc.prv/en/index.shtml",
-		"text": " IntraWeb",
+		"text": " Intranet",
 		"boldText" : "EDSC/SC",
 		"acronym": "Emploi et Développement social Canada / Service Canada"
 	}],
 	"customSearch": [{
 		"action" : "https://hrsdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx", // Mandatory
-		"placeholder" : "Recherche sur l'intraWeb", // Optional
+		"placeholder" : "Recherche sur l'intranet", // Optional
 		"method" : "get", // Mandatory "get" or "post"
 		"hiddenInput" : [{
 			"name" : "k",
