--- a/public/gcintranet/samples/subtheme-iservice-fr.html
+++ b/public/gcintranet/samples/subtheme-iservice-fr.html
@@ -55,13 +55,13 @@
 				}],
 				"intranetTitle": [{
 					"href": "https://iservice.prv/fra/index.shtml",
-					"text": " iService IntraWeb",
+					"text": " iService Intranet",
                     "boldText" : "EDSC/SC",
                     "acronym": "Emploi et Développement social Canada / Service Canada"
 				}],
 				"customSearch": [{
 					"action" : "https://hrsdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx", // Mandatory
-					"placeholder" : "Recherche sur l'intraWeb", // Optional
+					"placeholder" : "Recherche sur l'intranet", // Optional
 					"method" : "get", // Mandatory "get" or "post"
 					"hiddenInput" : [{
 						"name" : "k",
