--- a/public/gcintranet/samples/subtheme-labour-en.html
+++ b/public/gcintranet/samples/subtheme-labour-en.html
@@ -55,12 +55,12 @@
 				}],
 				"intranetTitle": [{
 					"href": "https://esdc.prv/en/index.shtml",
-					"text": " IntraWeb",
+					"text": " Intranet",
 					"boldText" : "Labour Program"
 				}],
 				"customSearch": [{
 					"action" : "https://hrsdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx", // Mandatory
-					"placeholder" : "Search the IntraWeb", // Optional
+					"placeholder" : "Search the Intranet", // Optional
 					"method" : "get", // Mandatory "get" or "post"
 					"hiddenInput" : [{
 						"name" : "k",
@@ -91,12 +91,12 @@ defTop.outerHTML = wet.builder.top({
 	}],
 	"intranetTitle": [{
 		"href": "https://esdc.prv/en/index.shtml",
-		"text": " IntraWeb",
+		"text": " Intranet",
 		"boldText" : "Labour Program"
 	}],
 	"customSearch": [{
 		"action" : "https://hrsdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx", // Mandatory
-		"placeholder" : "Search the IntraWeb", // Optional
+		"placeholder" : "Search the Intranet", // Optional
 		"method" : "get", // Mandatory "get" or "post"
 		"hiddenInput" : [{
 			"name" : "k",
