--- a/public/gcintranet/samples/subtheme-ort-en.html
+++ b/public/gcintranet/samples/subtheme-ort-en.html
@@ -60,7 +60,7 @@
 				}],
 				"intranetTitle": [{
 					"href": "https://esdc.prv/en/index.shtml",
-					"text": " IntraWeb",
+					"text": " Intranet",
 					"boldText" : "ESDC/SC",
 					"acronym": "Employment and Social Development Canada / Service Canada"
 				}],
@@ -109,7 +109,7 @@ defTop.outerHTML = wet.builder.appTop({
     }],
     "intranetTitle": [{
         "href": "https://esdc.prv/en/index.shtml",
-        "text": " IntraWeb",
+        "text": " Intranet",
         "boldText" : "ESDC/SC",
         "acronym": "Employment and Social Development Canada / Service Canada"
     }],
