--- a/public/gcintranet/samples/subtheme-ort-fr.html
+++ b/public/gcintranet/samples/subtheme-ort-fr.html
@@ -58,7 +58,7 @@
 				}],
 				"intranetTitle": [{
 					"href": "https://esdc.prv/fr/index.shtml",
-					"text": " IntraWeb",
+					"text": " Intranet",
 					"boldText" : "EDSC/SC",
 					"acronym": "Emploi et Développement social Canada / Service Canada"
 				}],
@@ -107,7 +107,7 @@ defTop.outerHTML = wet.builder.appTop({
     }],
     "intranetTitle": [{
         "href": "https://esdc.prv/fr/index.shtml",
-        "text": " IntraWeb",
+        "text": " Intranet",
         "boldText" : "EDSC/SC",
         "acronym": "Emploi et Développement social Canada / Service Canada"
 }],
