--- a/public/gcintranet/samples/nodoc-write-en.html
+++ b/public/gcintranet/samples/nodoc-write-en.html
@@ -39,7 +39,7 @@
                 <li><code>cdts-esdc-styles.css</code>: The GCIntranet <em>esdc</em> template</li>
                 <li><code>cdts-splash-styles.css</code>: The GCIntranet splash template</li>
             </ul>
-            <p>2. Add the <code>script</code> element referencing the CDTS Javascript file (<code>wet-[language].js</code> where [language] is either "en" or "fr"). CDTS is activated by specifying a <code>data-cdts-setup</code> attribute containing the CDTS configuration JSON object.</p>
+            <p>2. Add the <code>script</code> element referencing the CDTS JavaScript file (<code>wet-[language].js</code> where [language] is either "en" or "fr"). CDTS is activated by specifying a <code>data-cdts-setup</code> attribute containing the CDTS configuration JSON object.</p>
             <p>3. Create a <code>&lt;noscript&gt;</code> section which will make your page look good if JavaScript is disabled. You will need to load a fall-back static file in the <code>&lt;noscript&gt;</code> section.</p>
             <p>The <strong>CDTS configuration object</strong> that is passed in the <code>data-cdts-setup</code> attribute should include the following properties:</p>
             <ul>
