Fixing spelling errors

--- a/public/gcintranet/samples/nodoc-write-fr.html
+++ b/public/gcintranet/samples/nodoc-write-fr.html
@@ -46,7 +46,7 @@
             <ul>
                 <li><code>cdts-styles.css</code>: Le gabarit GCIntranet de base</li>
                 <li><code>cdts-eccc-styles.css</code>: Le gabarit GCIntranet <em>ECCC</em></li>
-                <li><code>cdts-esdc-styles.css</code>: Le gabarit GCIntranet <em>ESDC</em></li>
+                <li><code>cdts-esdc-styles.css</code>: Le gabarit GCIntranet <em>EDSC</em></li>
                 <li><code>cdts-splash-styles.css</code>: Le gabarit GCIntranet page d'entrée</li>
             </ul>
             <p>2. Ajouter l'élément <code>script</code> référençant le fichier JavaScript de SGDC (<code>wet-[language].js</code> où [langage] est soit "en" ou "fr"). Le SGDC est activé soit en spécifiant un attribut <code>data-cdts-setup</code> contenant l'objet JSON de configuration de SGDC.</p>
