--- a/public/gcweb/samples/nodoc-write-fr.html
+++ b/public/gcweb/samples/nodoc-write-fr.html
@@ -68,7 +68,7 @@
                         <li>Le gabarit GCWeb <code><em>splash</em></code> (doit aussi s'assurer que le fichier CSS correspondant <code>cdts-splash-styles.css</code> est utilisé)<pre>"mode": "splash"</pre></li>
                     </ul>
                 </li>
-                <li><code>base</code> (FACULTATIF) - Les configurations <code></code>refTop</code> et <code>refFooter</code> vont ici.</li>
+                <li><code>base</code> (FACULTATIF) - Les configurations <code>refTop</code> et <code>refFooter</code> vont ici.</li>
                 <li><code>top</code>, <code>preFooter</code>, <code>footer</code>, <code>secmenu</code>, <code>splash</code> (FACULTATIF) - Objets indiquant la configuration de chaque section, au besoin.</li>
             </ul>
             <pre>
