Fixing links and updating regex

--- a/public/gcintranet/samples/nodoc-write-fr.html
+++ b/public/gcintranet/samples/nodoc-write-fr.html
@@ -23,7 +23,7 @@
             templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
         -->
         <link rel="stylesheet" href="../cdts-styles.css">
-        <script type="text/javascript" src="../compiled/wet-fr.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"http://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-en.html","lang":"en","text":"English"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'></script>
+        <script type="text/javascript" src="../compiled/wet-fr.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"https://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-en.html","lang":"en","text":"English"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'></script>
         <noscript>
             <!-- Write closure fall-back static file -->
             <!-- refTop.html -->
@@ -73,7 +73,7 @@
             </ul>
             <pre>
 &lt;link rel="stylesheet" href="../cdts-styles.css"&gt;
-&lt;script type="text/javascript" src="../compiled/wet-en.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"http://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-fr.html","lang":"fr","text":"Français"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="../compiled/wet-en.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"https://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-fr.html","lang":"fr","text":"Français"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'&gt;&lt;/script&gt;
             </pre>
             <h3>Références de fichier de la section <code>&lt;body&gt;</code></h3>
             <p>Ajoutez trois éléments <code>div</code> avec les ID mentionnés ci-dessous.</p>
