--- a/public/gcweb/samples/nodoc-write-en.html
+++ b/public/gcweb/samples/nodoc-write-en.html
@@ -25,7 +25,7 @@
             templates.service.gc.ca: https://templates.service.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
         -->
         <link rel="stylesheet" href="../cdts-styles.css">
-        <script type="text/javascript" src="../compiled/wet-en.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"http://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-fr.html","lang":"fr","text":"Français"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'></script>
+        <script type="text/javascript" src="../compiled/wet-en.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"https://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-fr.html","lang":"fr","text":"Français"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'></script>
     </head>
     <body vocab="https://schema.org/" typeof="WebPage">
         <div id="cdts-def-top"></div>
@@ -63,7 +63,7 @@
             </ul>
             <pre>
 &lt;link rel="stylesheet" href="../cdts-styles.css"&gt;
-&lt;script type="text/javascript" src="../compiled/wet-en.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"http://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-fr.html","lang":"fr","text":"Français"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="../compiled/wet-en.js" data-cdts-setup='{"cdnEnv": "esdcprod","base":{"exitSecureSite":{"exitScript":true,"displayModal":true,"exitURL":"https://www.google.ca","exitDomains":"www.esdc.gc.ca, www.jobbank.gc.ca, www.redseal.ca","displayModalForNewWindow":true}},"top":{"lngLinks":[{"href":"nodoc-write-fr.html","lang":"fr","text":"Français"}]},"preFooter":{},"footer":{},"onCDTSPageFinalized":[]}'&gt;&lt;/script&gt;
             </pre>
             <h3>Section <code>&lt;body&gt;</code> references</h3>
             <p>Add three <code>div</code> elements with IDs mentioned below.</p>
