Remove unnecessary cdnEnv code
Co-authored-by: plup2 <pierre.lupien@hrsdc-rhdcc.gc.ca>

--- a/test/html/gcweb/TEST-widgets-en.html
+++ b/test/html/gcweb/TEST-widgets-en.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="../cdts-styles.css">
     <script src="../compiled/wet-en.js" data-cdts-setup='{
         "cdnEnv": "localhost",
-        "base": {"cdnEnv":"localhost"},
-        "top": {"cdnEnv": "localhost"},
-        "preFooter": {"cdnEnv": "localhost"},
-        "footer": {"cdnEnv": "localhost"},
+        "base": {},
+        "top": {},
+        "preFooter": {},
+        "footer": {},
         "onCDTSPageFinalized": [
             "<script>$(document).on(\"wb-ready.wb\", () => $(\"#wb-cont\").after(&apos;<a name=\"wetInitializedMarker\" id=\"wetInitializedMarker\"></a>&apos;))</script>"
         ]
